updated the tmux config.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 setw -g mode-keys vi
-set -g prefix C-h
-unbind C-b
-bind C-h send-prefix
+# set -g prefix C-h
+# unbind C-b
+# bind C-h send-prefix
  
 set bell-action none
 set -g status-bg black
