--- a/tpop/configure.ac
+++ b/tpop/configure.ac
@@ -1,4 +1,5 @@
 AC_INIT([tpop], [1.0], [bug-report@address]) 
+AC_CHECK_LIB([c])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror]) 
 AC_PROG_CC 
 AC_CONFIG_HEADERS([config.h]) 
