added some more list functions

--- a/tpop/src/Makefile.am
+++ b/tpop/src/Makefile.am
@@ -1,5 +1,9 @@
-bin_PROGRAMS = bsearch test_search test_quicksort
+bin_PROGRAMS = bsearch test_search test_quicksort test_dictnodelist
+
 bsearch_SOURCES = bsearch.c searchlib.c 
 test_search_SOURCES = test_search.c searchlib.c
+
 test_quicksort_SOURCES = test_quicksort.c quicksort.c
 test_quicksort_LDFLAGS = -lc
+
+test_dictnodelist_SOURCES = test_dictnodelist.c dictnodelist.c
