--- a/tpop/src/Makefile.in
+++ b/tpop/src/Makefile.in
@@ -33,7 +33,7 @@ NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
 bin_PROGRAMS = bsearch$(EXEEXT) test_search$(EXEEXT) \
-	test_quicksort$(EXEEXT)
+	test_quicksort$(EXEEXT) test_dictnodelist$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -49,6 +49,10 @@ PROGRAMS = $(bin_PROGRAMS)
 am_bsearch_OBJECTS = bsearch.$(OBJEXT) searchlib.$(OBJEXT)
 bsearch_OBJECTS = $(am_bsearch_OBJECTS)
 bsearch_LDADD = $(LDADD)
+am_test_dictnodelist_OBJECTS = test_dictnodelist.$(OBJEXT) \
+	dictnodelist.$(OBJEXT)
+test_dictnodelist_OBJECTS = $(am_test_dictnodelist_OBJECTS)
+test_dictnodelist_LDADD = $(LDADD)
 am_test_quicksort_OBJECTS = test_quicksort.$(OBJEXT) \
 	quicksort.$(OBJEXT)
 test_quicksort_OBJECTS = $(am_test_quicksort_OBJECTS)
@@ -66,10 +70,10 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
-SOURCES = $(bsearch_SOURCES) $(test_quicksort_SOURCES) \
-	$(test_search_SOURCES)
-DIST_SOURCES = $(bsearch_SOURCES) $(test_quicksort_SOURCES) \
-	$(test_search_SOURCES)
+SOURCES = $(bsearch_SOURCES) $(test_dictnodelist_SOURCES) \
+	$(test_quicksort_SOURCES) $(test_search_SOURCES)
+DIST_SOURCES = $(bsearch_SOURCES) $(test_dictnodelist_SOURCES) \
+	$(test_quicksort_SOURCES) $(test_search_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -160,6 +164,7 @@ bsearch_SOURCES = bsearch.c searchlib.c
 test_search_SOURCES = test_search.c searchlib.c
 test_quicksort_SOURCES = test_quicksort.c quicksort.c
 test_quicksort_LDFLAGS = -lc
+test_dictnodelist_SOURCES = test_dictnodelist.c dictnodelist.c
 all: all-am
 
 .SUFFIXES:
@@ -234,6 +239,9 @@ clean-binPROGRAMS:
 bsearch$(EXEEXT): $(bsearch_OBJECTS) $(bsearch_DEPENDENCIES) 
 	@rm -f bsearch$(EXEEXT)
 	$(LINK) $(bsearch_OBJECTS) $(bsearch_LDADD) $(LIBS)
+test_dictnodelist$(EXEEXT): $(test_dictnodelist_OBJECTS) $(test_dictnodelist_DEPENDENCIES) 
+	@rm -f test_dictnodelist$(EXEEXT)
+	$(LINK) $(test_dictnodelist_OBJECTS) $(test_dictnodelist_LDADD) $(LIBS)
 test_quicksort$(EXEEXT): $(test_quicksort_OBJECTS) $(test_quicksort_DEPENDENCIES) 
 	@rm -f test_quicksort$(EXEEXT)
 	$(test_quicksort_LINK) $(test_quicksort_OBJECTS) $(test_quicksort_LDADD) $(LIBS)
@@ -248,8 +256,10 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsearch.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dictnodelist.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/quicksort.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/searchlib.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_dictnodelist.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_quicksort.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_search.Po@am__quote@
 
