--- a/tpop/src/Makefile.am
+++ b/tpop/src/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = bsearch test_search test_quicksort test_dictnodelist test_vtree test_hash
+bin_PROGRAMS = bsearch test_search test_quicksort test_dictnodelist test_vtree test_hash test_strings test_heap
 
 bsearch_SOURCES = bsearch.c searchlib.c 
 test_search_SOURCES = test_search.c searchlib.c
@@ -11,5 +11,11 @@ test_dictnodelist_SOURCES = test_dictnodelist.c dictnodelist.c
 test_vtree_SOURCES = test_vtree.c vtree.c
 test_vtree_LDFLAGS = -lc
 
+test_heap_SOURCES = test_heap.c heaplib.c
+test_heap_LDFLAGS = -lc
+
 test_hash_SOURCES = test_hash.c hash.c dictnodelist.c searchlib.c
 test_hash_LDFLAGS = -lc
+
+test_strings_SOURCES = test_strings.c util.c
+test_strings_LDFLAGS = -lc
