--- a/tpop/src/Makefile.in
+++ b/tpop/src/Makefile.in
@@ -34,7 +34,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 bin_PROGRAMS = bsearch$(EXEEXT) test_search$(EXEEXT) \
 	test_quicksort$(EXEEXT) test_dictnodelist$(EXEEXT) \
-	test_vtree$(EXEEXT) test_hash$(EXEEXT)
+	test_vtree$(EXEEXT) test_hash$(EXEEXT) test_strings$(EXEEXT) \
+	test_heap$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -60,6 +61,11 @@ test_hash_OBJECTS = $(am_test_hash_OBJECTS)
 test_hash_LDADD = $(LDADD)
 test_hash_LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(test_hash_LDFLAGS) \
 	$(LDFLAGS) -o $@
+am_test_heap_OBJECTS = test_heap.$(OBJEXT) heaplib.$(OBJEXT)
+test_heap_OBJECTS = $(am_test_heap_OBJECTS)
+test_heap_LDADD = $(LDADD)
+test_heap_LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(test_heap_LDFLAGS) \
+	$(LDFLAGS) -o $@
 am_test_quicksort_OBJECTS = test_quicksort.$(OBJEXT) \
 	quicksort.$(OBJEXT)
 test_quicksort_OBJECTS = $(am_test_quicksort_OBJECTS)
@@ -69,6 +75,11 @@ test_quicksort_LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 am_test_search_OBJECTS = test_search.$(OBJEXT) searchlib.$(OBJEXT)
 test_search_OBJECTS = $(am_test_search_OBJECTS)
 test_search_LDADD = $(LDADD)
+am_test_strings_OBJECTS = test_strings.$(OBJEXT) util.$(OBJEXT)
+test_strings_OBJECTS = $(am_test_strings_OBJECTS)
+test_strings_LDADD = $(LDADD)
+test_strings_LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
+	$(test_strings_LDFLAGS) $(LDFLAGS) -o $@
 am_test_vtree_OBJECTS = test_vtree.$(OBJEXT) vtree.$(OBJEXT)
 test_vtree_OBJECTS = $(am_test_vtree_OBJECTS)
 test_vtree_LDADD = $(LDADD)
@@ -83,11 +94,13 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 SOURCES = $(bsearch_SOURCES) $(test_dictnodelist_SOURCES) \
-	$(test_hash_SOURCES) $(test_quicksort_SOURCES) \
-	$(test_search_SOURCES) $(test_vtree_SOURCES)
+	$(test_hash_SOURCES) $(test_heap_SOURCES) \
+	$(test_quicksort_SOURCES) $(test_search_SOURCES) \
+	$(test_strings_SOURCES) $(test_vtree_SOURCES)
 DIST_SOURCES = $(bsearch_SOURCES) $(test_dictnodelist_SOURCES) \
-	$(test_hash_SOURCES) $(test_quicksort_SOURCES) \
-	$(test_search_SOURCES) $(test_vtree_SOURCES)
+	$(test_hash_SOURCES) $(test_heap_SOURCES) \
+	$(test_quicksort_SOURCES) $(test_search_SOURCES) \
+	$(test_strings_SOURCES) $(test_vtree_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -181,8 +194,12 @@ test_quicksort_LDFLAGS = -lc
 test_dictnodelist_SOURCES = test_dictnodelist.c dictnodelist.c
 test_vtree_SOURCES = test_vtree.c vtree.c
 test_vtree_LDFLAGS = -lc
+test_heap_SOURCES = test_heap.c heaplib.c
+test_heap_LDFLAGS = -lc
 test_hash_SOURCES = test_hash.c hash.c dictnodelist.c searchlib.c
 test_hash_LDFLAGS = -lc
+test_strings_SOURCES = test_strings.c util.c
+test_strings_LDFLAGS = -lc
 all: all-am
 
 .SUFFIXES:
@@ -263,12 +280,18 @@ test_dictnodelist$(EXEEXT): $(test_dictnodelist_OBJECTS) $(test_dictnodelist_DEP
 test_hash$(EXEEXT): $(test_hash_OBJECTS) $(test_hash_DEPENDENCIES) 
 	@rm -f test_hash$(EXEEXT)
 	$(test_hash_LINK) $(test_hash_OBJECTS) $(test_hash_LDADD) $(LIBS)
+test_heap$(EXEEXT): $(test_heap_OBJECTS) $(test_heap_DEPENDENCIES) 
+	@rm -f test_heap$(EXEEXT)
+	$(test_heap_LINK) $(test_heap_OBJECTS) $(test_heap_LDADD) $(LIBS)
 test_quicksort$(EXEEXT): $(test_quicksort_OBJECTS) $(test_quicksort_DEPENDENCIES) 
 	@rm -f test_quicksort$(EXEEXT)
 	$(test_quicksort_LINK) $(test_quicksort_OBJECTS) $(test_quicksort_LDADD) $(LIBS)
 test_search$(EXEEXT): $(test_search_OBJECTS) $(test_search_DEPENDENCIES) 
 	@rm -f test_search$(EXEEXT)
 	$(LINK) $(test_search_OBJECTS) $(test_search_LDADD) $(LIBS)
+test_strings$(EXEEXT): $(test_strings_OBJECTS) $(test_strings_DEPENDENCIES) 
+	@rm -f test_strings$(EXEEXT)
+	$(test_strings_LINK) $(test_strings_OBJECTS) $(test_strings_LDADD) $(LIBS)
 test_vtree$(EXEEXT): $(test_vtree_OBJECTS) $(test_vtree_DEPENDENCIES) 
 	@rm -f test_vtree$(EXEEXT)
 	$(test_vtree_LINK) $(test_vtree_OBJECTS) $(test_vtree_LDADD) $(LIBS)
@@ -282,13 +305,17 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsearch.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dictnodelist.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hash.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/heaplib.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/quicksort.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/searchlib.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_dictnodelist.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_hash.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_heap.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_quicksort.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_search.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_strings.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_vtree.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/util.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vtree.Po@am__quote@
 
 .c.o:
